[gd_scene load_steps=4 format=3 uid="uid://workstation"]

[ext_resource type="Script" path="res://scripts/intro/workstation.gd" id="1"]
[ext_resource type="Shader" path="res://shaders/microscope_view.gdshader" id="2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_microscope"]
shader = ExtResource("2")
shader_parameter/focus = 0.0
shader_parameter/time_offset = 0.0

[node name="Workstation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.015, 0.015, 0.04, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 70.0
text = "XENOBIOLOGY WORKSTATION"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.3, 0.8, 0.9, 0.9)

[node name="MicroscopeView" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
material = SubResource("ShaderMaterial_microscope")
color = Color(1, 1, 1, 1)

[node name="FocusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "Focus: 0%"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.3, 0.8, 0.9, 0.9)

[node name="TooltipLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -70.0
offset_right = 250.0
offset_bottom = -20.0
text = "Adjust the microscope focus: E = Focus In, Q = Focus Out"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 15
theme_override_colors/font_color = Color(0.5, 0.9, 0.7, 0.85)

[node name="FocusSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -95.0
offset_right = 150.0
offset_bottom = -80.0
min_value = 0.0
max_value = 1.0
step = 0.01
